syntax = "proto3";

package auth;

option go_package = "/auth";

message AuthenticateRequest {
    string token = 1;
}

message AuthenticateResponse {
    bool IsAuthenticated = 1;
    string message = 2;
}

service AuthenticateService {
    rpc CheckAuthenticate(AuthenticateRequest) returns (AuthenticateResponse);
}